<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">A-Calli</string>
    <string name="sharedPreferences_name">data</string>
    <string name="sharedPreferences_version">version</string>
    <string name="fileName_saveFileNames">saveFiles</string>
    <string name="fileName_letterResource">letterBitmapResource</string>
    <string name="fileName_previewResource">letterBitmapPreviewResource</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="yes">예</string>
    <string name="no">아니요</string>
    <string name="openFile">파일 불러오기</string>
    <string name="saveFile">파일 저장</string>
    <string name="fileNotExist">저장되어 있는 파일이 없습니다.</string>
    <string name="fileLoadingFail">파일을 불러오는 중 문제가 발생했습니다.</string>
    <string name="fileSavingFail">파일을 저장하는 중 문제가 발생했습니다.</string>
    <string name="fileSavingSuccess">파일을 성공적으로 저장했습니다.</string>
    <string name="fileLoadingSuccess">파일을 성공적으로 불러왔습니다.</string>
    <string name="fileNameEmpty">파일 이름을 입력해주세요.</string>
    <string name="fileOverwrite">이미 존재하는 파일 이름입니다. 덮어쓰시겠습니까?</string>
    <string name="alpha">투명도 (0~255)</string>
    <string name="red">Red (0~255)</string>
    <string name="green">Green (0~255)</string>
    <string name="blue">Blue (0~255)</string>
    <string name="size">크기 (1~50)</string>
    <string name="degree">회전 (0~360)</string>
    <string name="colorPreview">색 미리보기</string>
    <string name="defaultFileName">제목없음</string>
    <string name="finish">종료</string>
    <string name="wantToSave">기존에 작업하던 내용을 저장하시겠습니까?</string>
    <string name="delete">삭제</string>
    <string name="fileDeleteSuccess">파일을 성공적으로 삭제했습니다.</string>
    <string name="fileDeleteFail">파일을 삭제하는데 실패했습니다.</string>
    <string name="fileAlreadyOpen">현재 작업 중인 파일입니다.</string>
    <string name="save">저장</string>
    <string name="open">열기</string>
    <string name="sensitivity">민감도</string>
    <string name="share">공유</string>
    <string name="makingDatabase">애플리케이션 최초 실행 시 데이터 베이스를 생성합니다. 잠시만 기다려 주세요. 데이터 베이스 생성이 완료되면 도움말 화면이 표시됩니다.</string>
    <string name="failSavingLetter">글씨를 데이터베이스에 추가하는데 실패했습니다.</string>
    <string name="fontName">NanumGothic.ttf</string>
    <string name="penDegree">펜 기울기</string>
    <string name="penThickness">펜 두께</string>
    <string name="failLoadLetter">작성한 글씨를 불러오는데 실패했습니다.</string>
    <string name="failLoadImageFile">이미지 파일로 변환하여 불러오는데 실패했습니다.</string>
    <string name="failFindSaving">저장소를 찾지 못했습니다.</string>

</resources>
